--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -48,7 +48,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/client/tasks">
+            <a class="nav-link" th:href="@{/client/tasks}">
                 <i class="fas fa-fw fa-list"></i>
                 <span>Task List</span></a>
         </li>
