--- a/src/main/resources/templates/client-tasks-offers.html
+++ b/src/main/resources/templates/client-tasks-offers.html
@@ -4,6 +4,7 @@
         layout:decorate="~{layout}">
 <head>
     <title>Task Offers</title>
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
@@ -66,7 +67,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" STYLE="width='100%'; cellspacing='0'" >
+                    <table class="table table-bordered" id="offerTable" STYLE="width='100%'; cellspacing='0'" >
                         <thead>
                         <tr>
                             <th>Price Offered</th>
@@ -105,6 +106,10 @@
                 </div>
             </div>
         </div>
+
+        <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
+        <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
+        <script type="text/javascript" th:src="@{/js/clientTaskScripts.js}" defer></script>
 
 </section>
 
