--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -60,7 +60,7 @@
                                     <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                         Total Earnings
                                     </div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${totalEarnings}">$40,000</div>
                                 </div>
                                 <div class="col-auto">
                                     <i class="fas fa-money fa-2x text-gray-300"></i>
