--- a/src/main/resources/templates/client-tasks-offers.html
+++ b/src/main/resources/templates/client-tasks-offers.html
@@ -42,16 +42,19 @@
             <span>New Request</span></a>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="/client/tasks/board">
-            <i class="fas fa-fw fa-th-large"></i>
-            <span>Board</span></a>
-    </li>
-
     <li class="nav-item active">
-        <a class="nav-link" href="/client/tasks">
+        <a class="nav-link" th:href="@{/client/tasks}">
             <i class="fas fa-fw fa-list"></i>
             <span>Task List</span></a>
+    </li>
+
+    <hr class="sidebar-divider">
+
+    <li class="nav-item">
+        <a class="nav-link" href="/client/serviceProviders">
+            <i class="fas fa-fw fa-users"></i>
+            <span>Service Providers</span>
+        </a>
     </li>
 
 </section>
