--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,6 +26,7 @@
 </head>
 
 <!-- Page Wrapper -->
+<body id="page-top">
 <div id="wrapper">
 
     <!-- Sidebar -->
@@ -182,5 +183,5 @@
 
 <!-- Custom scripts for all pages-->
 <script th:src="@{/js/sb-admin-2.min.js}"></script>
-
+</body>
 </html>
