dashboard cards now link to their respective pages (pending offers page for pending card etc etc)

--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -72,6 +72,7 @@
 
                 <div class="col-xl-12 col-md-6 mb-4">
                     <div class="card border-left-secondary shadow h-100 py-2">
+                        <a th:href="@{/serviceProvider/tasks/pending-tasks}">
                         <div class="card-body">
                             <div class="row no-gutters align-items-center">
                                 <div class="col mr-2">
@@ -85,11 +86,13 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-xl-12 col-md-6 mb-4">
                     <div class="card border-left-warning shadow h-100 py-2">
+                        <a th:href="@{/serviceProvider/tasks/ongoing-tasks}">
                         <div class="card-body">
                             <div class="row no-gutters align-items-center">
                                 <div class="col mr-2">
@@ -103,11 +106,13 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-xl-12 col-md-6 mb-4">
                     <div class="card border-left-success shadow h-100 py-2">
+                        <a th:href="@{/serviceProvider/tasks/completed-tasks}">
                         <div class="card-body">
                             <div class="row no-gutters align-items-center">
                                 <div class="col mr-2">
@@ -121,6 +126,7 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
 
