--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -77,6 +77,9 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     border-radius: 50% !important;
 }
 
+.center-element {
+    text-align:center;
+}
 
 
 /*End of Custom css created for Errand only*/
