--- a/src/main/resources/templates/client-tasks-create.html
+++ b/src/main/resources/templates/client-tasks-create.html
@@ -3,7 +3,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout}">
 <head>
-  <title>Client Tasks</title>
+  <title>New Task</title>
 </head>
 
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
