--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -138,6 +138,26 @@
                     </div>
                 </div>
 
+                <div class="col-xl-12 col-md-6 mb-4">
+                    <div class="card border-left-info shadow h-100 py-2">
+                        <a th:href="@{/serviceProvider/tasks/completed-tasks}">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                            Current Rating
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${currentRating}">5</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fas fa-star fa-2x text-gray-300"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
             </div>
 
 
