--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -184,9 +184,25 @@
                         <a  th:href="@{/client/serviceProviders}">Connect with trusted service providers. &rarr;</a>
                     </div>
                 </div>
-
             </div>
-
+            <!--View ratings-->
+            <div class="col-xl-3 col-md-6 mb-4">
+                <div class="card border-left-success shadow h-100 py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                    My Ratings</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                <a  th:href="@{/client/viewMyRatings}">View my ratings from service providers. &rarr;</a>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-star fa-2x text-gray-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
