--- a/src/main/resources/templates/serviceprovider-dashboard.html
+++ b/src/main/resources/templates/serviceprovider-dashboard.html
@@ -138,6 +138,25 @@
                     </div>
                 </div>
 
+                <!--View ratings-->
+                <div class="col-xl-12 col-md-6 mb-4">
+                    <div class="card border-left-success shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                        My Ratings</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                    <a  th:href="@{/serviceProvider/viewMyRatings}">View my ratings from Clients. &rarr;</a>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-star fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
 
