--- a/src/main/resources/templates/serviceprovider-ratings.html
+++ b/src/main/resources/templates/serviceprovider-ratings.html
@@ -24,7 +24,7 @@
 
     <hr class="sidebar-divider my-0">
 
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" th:href="@{/serviceProvider/dashboard}">
 
             <i class="fas fa-fw fa-tachometer-alt"></i>
