--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -120,10 +120,17 @@
                                 >
                                     <i class="fas fa-pen"></i>
                                 </a>
+                                <a th:href="@{/client/tasks/{taskId}/complete(taskId=${task.id})}"
+                                   class="btn btn-success btn-circle btn-sm"
+                                   title="Set to Completed"
+                                   th:classappend="${task.status != 'ONGOING' ? 'd-none' : ''}"
+                                >
+                                    <i class="fas fa-check-circle"></i>
+                                </a>
                                 <a th:href="@{/client/tasks/{taskId}/cancel(taskId=${task.id})}"
                                    class="btn btn-danger btn-circle btn-sm"
                                    title="Cancel Task"
-                                   th:classappend="${task.status != 'PENDING' ? 'disabled' : ''}"
+                                   th:classappend="${task.status != 'PENDING' ? 'd-none' : ''}"
                                 >
                                     <i class="fas fa-times"></i>
                                 </a>
@@ -131,7 +138,9 @@
                             <td style="text-align: center; white-space: nowrap;">
                                 <a data-toggle="modal" data-target="#Modal"
                                    title="Rate Service Provider"
-                                   class="btn btn-info btn-circle btn-sm">
+                                   class="btn btn-primary btn-circle btn-sm"
+                                   th:classappend="${task.status != 'COMPLETED' ? 'disabled' : ''}"
+                                >
                                     <i class="fas fa-star"></i>
                                 </a>
 
@@ -151,8 +160,8 @@
                                                 <form class="rating"
                                                       th:action="@{/client/tasks/{taskId}/rate(taskId=${task.id})}"
                                                       th:object="${rating}" method="post">
-                                                    <div class="form-group row">
-                                                        <div class="col-sm-6 mb-3 mb-sm-0">
+
+                                                    <div class="form-group">
                                                             <label>Rate your Service Provider:</label>
                                                             <input type="number"
                                                                    class="form-control"
@@ -160,16 +169,18 @@
                                                                    min="0" max="5"
                                                                    th:field="*{serviceProviderRating}"
                                                                    required="required">
-                                                        </div>
                                                     </div>
-                                                    <div class="col-sm-12">
-                                                        <label>Rating Description:</label>
+
+                                                    <div class="form-group">
+                                                        <label for="description">Rating Description:</label>
                                                         <textarea type="text"
-                                                                  class="form-control custom-textarea"
+                                                                  class="form-control"
                                                                   th:field="*{serviceProviderRatingDescription}"
-                                                                  required="required"></textarea>
+                                                                  required="required"
+                                                                  id="description"
+                                                        ></textarea>
                                                     </div>
-                                                    <br>
+
                                                     <button type="submit" class="btn btn-primary btn-user btn-block">
                                                         Submit Rating
                                                     </button>
