--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -87,7 +87,7 @@
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                     Ongoing Requests</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${ongoingTaskCount}" id="ongoingTasks"></div>
                             </div>
