Hide edit button in task list

--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -184,19 +184,22 @@
                 </div>
             </div>
         </div>
-        <!--View ratings-->
-        <div class="col-xl-5 col-lg-4">
-            <div class="card shadow mb-4">
-                <div class="card-body">
-                    <div class="row no-gutters align-items-center">
-                        <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                My Ratings</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
-                            <a  th:href="@{/client/viewMyRatings}">View my ratings from service providers. &rarr;</a>
-                        </div>
-                        <div class="col-auto">
-                            <i class="fas fa-star fa-2x text-gray-300"></i>
+
+        <div class="row">
+            <!--View client ratings-->
+            <div class="col-xl-5 col-lg-4">
+                <div class="card shadow mb-4">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                    My Ratings</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                <a  th:href="@{/client/viewMyRatings}">View my ratings from service providers. &rarr;</a>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-star fa-2x text-gray-300"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
