--- a/src/main/resources/templates/admin-clients.html
+++ b/src/main/resources/templates/admin-clients.html
@@ -4,6 +4,7 @@
         layout:decorate="~{layout}">
 <head>
   <title>Clients Management</title>
+  <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
@@ -58,25 +59,9 @@
         <div class="card-header py-3">
           <h6 class="m-0 font-weight-bold text-primary">Clients Management</h6>
         </div>
-        <br>
-        <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-              th:action="@{/admin/clients/search}"
-              th:object="${client}"
-              method="get">
-          <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search name..."
-                   aria-label="Search" aria-describedby="basic-addon2" name="name">
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="submit">
-                <i class="fas fa-search fa-sm"></i>
-              </button>
-            </div>
-          </div>
-        </form>
-
         <div class="card-body">
           <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered" id="clientTable">
 
               <thead>
                 <tr>
@@ -87,12 +72,11 @@
                   <th>Contact Number</th>
                   <th>Date Created</th>
                   <th>Date Modified</th>
-                  <th>Action</th>
                 </tr>
               </thead>
 
-              <tbody th:each="client :${clients}">
-                <tr>
+              <tbody>
+                <tr th:each="client :${clients}">
                   <td th:text="${client.id}"></td>
                   <td th:text="${client.firstName}"></td>
                   <td th:text="${client.lastName}"></td>
@@ -100,17 +84,16 @@
                   <td th:text="${client.contactNumber}"></td>
                   <td th:text="${client.user.createdDate}"></td>
                   <td th:text="${client.user.modifiedDate}"></td>
-                  <td><button class="btn btn-primary">View Task</button></td>
                 </tr>
               </tbody>
-
             </table>
           </div>
         </div>
-
       </div>
-
     </div>
+    <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
+    <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
+    <script type="text/javascript" th:src="@{/js/clientTaskScripts.js}" defer></script>
   </section>
 
 </body>
